# ChangeLog for x11-libs/libX11
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.72 2007/05/27 04:21:11 kumba Exp $

  27 May 2007; Joshua Kinard <kumba@gentoo.org> libX11-1.1.1-r1.ebuild:
  Stable on mips.

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  -libX11-1.0.1-r1.ebuild, -libX11-1.0.3-r1.ebuild,
  -libX11-1.0.99.2-r1.ebuild, -libX11-1.1.1.ebuild:
  Clean up several unused versions.

  18 Apr 2007; Jose Luis Rivero <yoswink@gentoo.org> libX11-1.1.1-r1.ebuild:
  Stable on alpha wrt security bug #172752

  13 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libX11-1.1.1-r1.ebuild:
  ppc stable, bug #172752

  12 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libX11-1.1.1-r1.ebuild:
  Stable on sparc wrt security #172752

  11 Apr 2007; Jeroen Roovers <jer@gentoo.org> libX11-1.1.1-r1.ebuild:
  Stable for HPPA (bug #172752).

  11 Apr 2007; Raúl Porcel <armin76@gentoo.org> libX11-1.1.1-r1.ebuild:
  ia64 + x86 stable wrt security bug 172752

  11 Apr 2007; Peter Weller <welp@gentoo.org> libX11-1.1.1-r1.ebuild:
  Stable on amd64 wrt bug 172752

  11 Apr 2007; Markus Rothe <corsair@gentoo.org> libX11-1.1.1-r1.ebuild:
  Stable on ppc64; bug #172752

*libX11-1.1.1-r1 (05 Apr 2007)
*libX11-1.0.3-r2 (05 Apr 2007)

  05 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/xorg-libX11-1.1.1-xinitimage.diff, +libX11-1.0.3-r2.ebuild,
  +libX11-1.1.1-r1.ebuild:
  (#172752) Security bump. CVE 2007-1667: libX11 XInitImage input validation.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  libX11-1.0.1-r1.ebuild, libX11-1.0.3.ebuild, libX11-1.0.3-r1.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  06 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> libX11-1.0.3.ebuild:
  Stable on Alpha.

*libX11-1.1.1 (02 Dec 2006)

  02 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org> -libX11-1.1.ebuild,
  +libX11-1.1.1.ebuild: