@@ -1,5 +1,7 @@
 AUX xorg-libX11-1.1.1-xinitimage.diff 2683 RMD160 d649c60d66c14ff0315f56bd58b9122e8646f895 SHA1 a0f904115ad9dc441bebcf2f8267f9751322b727 SHA256 2286e63908e3ea6e4eff0455b147d72fe66dd8e1b8cbc21c3dfc0c1fdfc49e68
 DIST libX11-1.1.1.tar.bz2 1426405 RMD160 99c2d2bd6823c09667dffa5e4265924e93e76eef SHA1 048dc3d850666010e81a86bbe0960a643557251a SHA256 5359db57793430429786b648ac570d4ab205797306e049bf1e8675250af21541
+DIST libX11-1.1.2.tar.bz2 1523644 RMD160 c722e1eaa04a3d753660496d4e527b695c68db38 SHA1 7190d36389eb7903831cd9541d919f55ac5098e9 SHA256 b77e4fd2bbd4092e7e78d0964760ad8ab160caccd4bc6d7d0c87a23febaea85e
 EBUILD libX11-1.1.1-r1.ebuild 944 RMD160 3c6ccc9d352e4f753d0bc3bdc205246838eda8c8 SHA1 0470e4ee39b2a8259d4a4ad021dfd6c18b07ba72 SHA256 126f0e858f73a1b6443e34e20e3721a8f5d002b5767fb0b37139f0f469d6019a
-MISC ChangeLog 10655 RMD160 dda16254012605768eda0fd58b022d61843bffb7 SHA1 bc601af4518e438522a375c32b437d1510fe5f43 SHA256 a55d97bc2feb8941c19b276a4814f436664a05a52e5ad46bcbb5d63f28d7581c
+EBUILD libX11-1.1.2.ebuild 892 RMD160 ad7be23bbcc8492f10602a74cb8cd0d7f43da0be SHA1 17dd4d7cc3d71f1fcde356b27eff9e9fcf19301b SHA256 be825ce4f1e152adcd62543a85fe3d474eac08a77a8d4860c564c9928a0c2f68
+MISC ChangeLog 10935 RMD160 4c788b67e87185560bbfeaad76d01145db8f4e2d SHA1 9832a034595dfc36064aa1f6e2b84a97e904ce84 SHA256 b2d9b2201ee44c417daf212bc1a6561b6d767e672c9cd3ed78dc530d185d02fb
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
